--- a/HelloSQL/BilgeAdam.SQLServer.WinFormApp/App.config
+++ b/HelloSQL/BilgeAdam.SQLServer.WinFormApp/App.config
@@ -1,6 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
-    </startup>
+  <connectionStrings>
+    <add name="NrthCnnStr" 
+         connectionString="Database=Northwind;Server=10.11.22.206;User Id=student;Password=ba123" 
+         providerName="System.Data.SqlClient" />
+  </connectionStrings>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
+  </startup>
 </configuration>
